# gp2llm

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/client/: mod.rs
src/models/: mod.rs
tests/: integration_tests.rs
