[package]
name = "gp2llm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
